--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+
+Nonkululeko Khanyile <nonku003@gmail.com>
+Chukwuebuka Anyaeji <>
