MySQL setup dev

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Justin Majetich <justinmajetich@gmail.com>
 
 
 Nonkululeko Khanyile <nonku003@gmail.com>
-Chukwuebuka Anyaeji <>
+Chukwuebuka Anyaeji <kenkinado@gmail.com>
